Added: 	- general layout for main activity including buttons 	- layout for isSignedIn and login activity 	- Buttons and button listeners for isSignedIn and BACK

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".IsSignedInActivity"
+            android:label="@string/is_signed_in"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
