Added layout for login, loginTempPass, logout, getMvpdList and authorize. Added toast messages if rId is empty for logout and getMvpdList.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,31 @@
             android:label="@string/is_signed_in"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/login"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".LoginTempPassActivity"
+            android:label="@string/login_temp_pass"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".LogoutActivity"
+            android:label="@string/login_temp_pass"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".MvpdListActivity"
+            android:label="@string/login_temp_pass"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".AuthorizeActivity"
+            android:label="@string/login_temp_pass"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
