--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.android.adobepassclientlessrefapp">
 
     <application
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -51,6 +53,11 @@
         </activity>
         <activity
             android:name=".ui.AboutClientlessActivity"
+            android:label="@string/login_temp_pass"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".AdobeAuthActivity"
             android:label="@string/login_temp_pass"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
