--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,13 @@ dependencies {
     // LEAP SDK
     //implementation 'com.nbcsports.leapsdk:authentication:1.1.44'
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Lombok
+    implementation 'org.projectlombok:lombok:1.16.4'
+    annotationProcessor 'org.projectlombok:lombok:1.16.4'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
