Added save button functionality in adobe auth activity and functionality of a clear form button.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // LEAP SDK
-    //implementation 'com.nbcsports.leapsdk:authentication:1.1.44'
+    implementation 'com.nbcsports.leapsdk:authentication:1.1.44'
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
