--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ dependencies {
     implementation 'com.nbcsports.leapsdk:authentication:1.1.44'
 
     // Timber
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    //implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'jp.wasabeef:picasso-transformations:2.1.0'
 
     // Lombok
     implementation 'org.projectlombok:lombok:1.16.4'
