Refactored some form related methods into separate utils class. Created layout of media info activity form with back button, clear button and some error checks done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:label="@string/adobe_auth_setup"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".MediaInfoActivity"
+            android:label="@string/media_info_setup"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <receiver android:name = ".utils.NetworkReceiver">
             <intent-filter>
                 <action android:name = "android.net.conn.CONNECTIVITY_CHANGE" />
