--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.16.4'
     annotationProcessor 'org.projectlombok:lombok:1.16.4'
 
-//    // androidx
-//    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-//
-//    // Joda Time
-//    implementation 'net.danlew:android.joda:2.8.2'
+    // ExoPlayer
+    //implementation 'com.google.android.exoplayer:exoplayer:2.10.5'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
