--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.16.4'
 
     // ExoPlayer
-    //implementation 'com.google.android.exoplayer:exoplayer:2.10.5'
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
