LEAPP-4874 Added Entitlement to layouts and EntitlementActivity. Currently can generate sample entitlement data and clear edit text form.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,11 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="landscape">
         </activity>
+        <activity
+            android:name=".EntitlementActivity"
+            android:label="@string/entitlement"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <receiver android:name = ".utils.NetworkReceiver">
             <intent-filter>
                 <action android:name = "android.net.conn.CONNECTIVITY_CHANGE" />
